--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.3.0",
     "@zxing/ngx-scanner": "^3.5.0",
     "angularx-qrcode": "^13.0.15",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
