--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.3.0",
     "@zxing/ngx-scanner": "^3.5.0",
     "angularx-qrcode": "^13.0.15",
+    "event-source-polyfill": "^1.0.26",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "~13.3.7",
     "@angular/cli": "~13.3.7",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/event-source-polyfill": "^1.0.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
