--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "angularx-qrcode": "^13.0.15",
     "event-source-polyfill": "^1.0.26",
     "jwt-decode": "^3.1.2",
+    "ngx-sse-client": "^2.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
